# gen_fractal

./: .gitignore  CMakeLists.txt  anim_param.hpp  batch.cpp  batch.hpp  bbox2.hpp  controlsdialog.cpp  controlsdialog.h  controlsdialog.ui  cubic.hpp  document.cpp  document.h  fractal_iter.hpp  fractalgenerator.h  fractalgeneratorview.cpp  fractalgeneratorview.h  fractalview.cpp  fractalview.h  fractalview_param.h  interp_curves.hpp  main.cpp  mainwindow.cpp  mainwindow.h  render_fractal.cpp  render_fractal.hpp  scoped_true.hpp  test_cubic.cpp  throw.hpp  type.hpp  vec2.hpp  vec2_qt.hpp
examples/: alternating_square_wave.txt  fern.txt  fir_tree.txt  funny_crocodiles.txt  funny_high_voltage_supports.txt  koch_snowflake.txt  lace.txt  leaf.txt  perf.txt  quad_filler_non_uniform.txt  quad_filler_peano.txt  spiral.txt  triangular_filler.txt  triangular_filler_2.txt  triangular_filler_2_evolution.txt  walking_bears.txt  warrior.txt
examples/batches/: anim_spirals_manual.csv  anim_triangular_filler.csv  filler_tranition.csv  filler_tranition_2.csv  filler_tranition_2.ods  filler_transition.csv  unknown.csv
